--- a/source/TReportFormatterProgress.cls
+++ b/source/TReportFormatterProgress.cls
@@ -10,6 +10,7 @@ Attribute VB_Exposed = False
 Option Explicit
 
 Dim m_step_templates As Collection
+Dim m_reporter As TReport
 
 Public Function process_msg(msg_package As Collection, Optional silent) As String
 
@@ -26,7 +27,7 @@ Public Function process_msg(msg_package As Collection, Optional silent) As Strin
             
         Case REPORT_MSG_TYPE_STEP
             process_msg = message
-            If Not silent Then Debug.Print message;
+            Reporter.print_report message, consecutive:=True, silent:=silent
         Case Else
             process_msg = vbNullString
     End Select
@@ -108,3 +109,12 @@ Public Function get_code_templates_for_missing_steps() As String
     End If
     get_code_templates_for_missing_steps = report_output
 End Function
+
+Public Property Get Reporter() As TReport
+    Set Reporter = m_reporter
+End Property
+
+Public Property Let Reporter(ByVal new_reporter As TReport)
+    Set m_reporter = new_reporter
+End Property
+
