--- a/source/TReportFormatterVerbose.cls
+++ b/source/TReportFormatterVerbose.cls
@@ -40,8 +40,8 @@ Public Function process_msg(msg_package As Collection, Optional silent) As Strin
             CurrentExample = vbNullString
         Case REPORT_MSG_TYPE_CODE_TEMPLATE
             StepTemplates.Add message
-        Case REPORT_MSG_TYPE_DURATION
-            Reporter.print_report vbLf & message, silent:=silent
+        Case REPORT_MSG_TYPE_STATS
+            Reporter.print_report message, silent:=silent
         Case Else
             TRun.Session.Log.debug_log "unknown report msg type >" & msg_package(REPORT_MSG_TYPE) & "<"
             process_msg = vbNullString
@@ -65,8 +65,8 @@ Public Function format_msg_content(msg_package As Collection) As String
             formatted_msg = format_step(msg_package(REPORT_MSG_CONTENT), msg_package(REPORT_MSG_STATUS), msg_package(REPORT_MSG_ERR))
         Case REPORT_MSG_TYPE_CODE_TEMPLATE
             formatted_msg = msg_package(REPORT_MSG_CONTENT)
-        Case REPORT_MSG_TYPE_DURATION
-            formatted_msg = msg_package(REPORT_MSG_CONTENT)
+        Case REPORT_MSG_TYPE_STATS
+            formatted_msg = vbLf & msg_package(REPORT_MSG_CONTENT)
         Case Else
             formatted_msg = vbNullString
     End Select
