--- a/source/TSession.cls
+++ b/source/TSession.cls
@@ -13,6 +13,7 @@ Dim m_logger As Logger
 Dim m_reporter As TReport
 Dim m_start_time As Long
 Dim m_end_time As Long
+Dim m_run_statistics As Collection
 
 Public Property Get Log() As Logger
     If m_logger Is Nothing Then
@@ -41,17 +42,18 @@ Public Property Let Reporter(ByVal new_reporter As TReport)
     Set Reporter = new_reporter
 End Property
 
-Public Sub run_test(Optional filter_tag, Optional report_format)
+Public Sub run_test(Optional filter_tag, Optional report_format, Optional features_as_text As Collection, Optional silent)
 
-    Dim features_as_text As Collection
     Dim parsed_features As Collection
 
     If IsMissing(filter_tag) Then filter_tag = vbNullString
     If IsMissing(report_format) Then report_format = "verbose"
     set_report_format CStr(report_format)
-    Set features_as_text = TFeatureLoader.load_features
+    If features_as_text Is Nothing Then Set features_as_text = TFeatureLoader.load_features
+    If IsMissing(silent) Then silent = False
     Set parsed_features = TFeatureParser.parse_loaded_features(features_as_text)
-    run_features parsed_features, CStr(filter_tag)
+    run_features parsed_features, CStr(filter_tag), silent
+    report_statistics RunStatistics, EndTime - StartTime
     Reporter.report_code_templates_for_missing_steps
     TConfig.StepImplementations = Nothing
 End Sub
@@ -67,10 +69,9 @@ Public Sub run_features(parsed_features As Collection, Optional filter_tag, Opti
     For Each parsed_feature In parsed_features
         'cast Variant to TFeature
         Set feature = parsed_feature
-        TFeatureRunner.run_feature feature, filter_tag:=CStr(filter_tag), silent:=silent
+        RunStatistics.Add TFeatureRunner.run_feature(feature, filter_tag:=CStr(filter_tag), silent:=silent)
     Next
     EndTime = ExtraVBA.get_unix_timestamp(Now, Timer)
-    If Not silent Then Reporter.report REPORT_MSG_TYPE_DURATION, CStr(get_duration_in_ms(StartTime, EndTime))
 End Sub
 
 Public Property Get StartTime() As Long
@@ -94,17 +95,80 @@ Private Sub Class_Initialize()
     m_end_time = 0
 End Sub
 
-Public Function get_duration_in_ms(start_time As Long, end_time As Long) As String
+Public Function get_duration_as_text(duration_in_ms As Long) As String
     
     Dim formatted_duration As String
-    Dim duration_in_ms As Long
     Dim minutes As Long
     Dim seconds As Long
     Dim milliseconds As Long
     
-    duration_in_ms = end_time - start_time
     minutes = CLng(Int(duration_in_ms / 60000))
     seconds = CLng(Int((duration_in_ms - (minutes * 60000)) / 1000))
     milliseconds = duration_in_ms - (minutes * 60000) - (seconds * 1000)
-    get_duration_in_ms = minutes & "m " & seconds & "." & Format(milliseconds, "000") & "s"
+    get_duration_as_text = minutes & "m " & seconds & "." & Format(milliseconds, "000") & "s"
 End Function
+
+Public Property Get RunStatistics() As Collection
+    If m_run_statistics Is Nothing Then
+        Set m_run_statistics = New Collection
+    End If
+    Set RunStatistics = m_run_statistics
+End Property
+
+Public Property Let RunStatistics(ByVal new_run_statistics As Collection)
+    Set m_run_statistics = new_run_statistics
+End Property
+
+Public Function get_step_statistics(run_statistics As Collection) As String
+    
+    Dim index As Integer
+    Dim states As Variant
+    Dim step_statistics As Collection
+    Dim feature_log As Variant
+    Dim example_log As Variant
+    Dim step_log As Variant
+    Dim step_results As String
+    Dim counter As Long
+    
+    Set step_statistics = New Collection
+    states = Array(STATUS_OK, STATUS_FAIL, STATUS_MISSING, STATUS_PENDING)
+    For index = 0 To UBound(states)
+        step_statistics.Add 0, states(index)
+    Next
+    step_statistics.Add 0, "sum"
+    For Each feature_log In run_statistics
+        For Each example_log In feature_log
+            For Each step_log In example_log
+                If IsArray(step_log) Then
+                    counter = step_statistics(step_log(0)) + 1
+                    step_statistics.Remove step_log(0)
+                    step_statistics.Add counter, step_log(0)
+                    counter = step_statistics("sum") + 1
+                    step_statistics.Remove "sum"
+                    step_statistics.Add counter, "sum"
+                End If
+            Next
+        Next
+    Next
+    step_results = step_statistics("sum") & " steps ("
+    For index = 0 To UBound(states)
+        If step_statistics(states(index)) > 0 Then
+            step_results = step_results & step_statistics(states(index)) & " " & states(index) & ", "
+        End If
+    Next
+    step_results = Replace(step_results, STATUS_OK, "passed")
+    step_results = Replace(step_results, STATUS_FAIL, "failed")
+    step_results = Replace(step_results, STATUS_MISSING, "undefined")
+    step_results = Replace(step_results, STATUS_PENDING, "pending")
+    get_step_statistics = Left(step_results, Len(step_results) - 2) & ")"
+End Function
+
+Public Sub report_statistics(run_statistics As Collection, run_duration As Long, Optional silent)
+
+    Dim report_msg As String
+    
+    If IsMissing(silent) Then silent = False
+    report_msg = get_step_statistics(run_statistics) & vbLf _
+                    & get_duration_as_text(run_duration)
+    Reporter.report REPORT_MSG_TYPE_STATS, report_msg, silent:=silent
+End Sub
