[chore] refactor TExampleRunner: don't stop test but skip steps after step results other than OK

--- a/source/TExampleRunner.cls
+++ b/source/TExampleRunner.cls
@@ -9,35 +9,35 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Dim m_is_test_stopped As Boolean
-
 Public Function run_example(example As TExample, Optional silent) As Collection
 
     Dim step_result As Variant
     Dim err_msg As String
     Dim step As TStep
     Dim example_statistics As Collection
+    Dim last_step_result As String
 
     If IsMissing(silent) Then silent = False
+    step_result = Array(vbNullString, vbNullString)
     Set example_statistics = New Collection
-    IsTestStopped = False
     If Not silent Then TRun.Session.Reporter.report REPORT_MSG_TYPE_EXAMPLE_TITLE, example.OriginalHeadline
     example_statistics.Add example.OriginalHeadline, "example"
     On Error GoTo error_handler
     For Each step In example.Steps
         err_msg = vbNullString
+        last_step_result = step_result(0)
         step_result = TStepRunner.run_step(step, silent:=silent)
         If Not step_result(0) = STATUS_OK Then
             err_msg = step_result(1)
             'this is a hack because of the broken exception handling in vba (e.g. vba will overwrite custom err descriptions)
             If step_result(0) = STATUS_PENDING Then err_msg = TSpec.LastFailMsg
-            stop_example
+        End If
+        ' mark all steps as skipped when the last step wasn't OK
+        If last_step_result = STATUS_MISSING Or last_step_result = STATUS_FAIL Or last_step_result = STATUS_SKIPPED Then
+            If step_result(0) <> STATUS_MISSING Then step_result(0) = STATUS_SKIPPED
         End If
         example_statistics.Add Array(step_result(0), step.OriginalStepDefinition)
         If Not silent Then TRun.Session.Reporter.report REPORT_MSG_TYPE_STEP, step.OriginalStepDefinition, step_result(0), err_msg
-        If IsTestStopped Then
-            Exit For
-        End If
     Next
     Set run_example = example_statistics
     Exit Function
@@ -46,18 +46,4 @@ error_handler:
     TRun.Session.Log.log_function_error "Runtime errror in TExampleRunner.run_example", _
         example(CLAUSE_ATTR_TYPE) & " " & example(CLAUSE_ATTR_NAME)
 End Function
-
-Public Sub stop_example()
-    IsTestStopped = True
-End Sub
-
-Public Property Get IsTestStopped() As Boolean
-    IsTestStopped = m_is_test_stopped
-End Property
-
-Private Property Let IsTestStopped(ByVal is_test_stopped As Boolean)
-    m_is_test_stopped = is_test_stopped
-End Property
-
-
 
