--- a/step_definitions/Steps_parse_step_expressions.cls
+++ b/step_definitions/Steps_parse_step_expressions.cls
@@ -14,8 +14,8 @@ Public Sub Given_a_step_definition_STR_65172AC6DD8A(step_expressions As Collecti
     TStepVars.gherkin_text = step_expressions(1)
 End Sub
 
-Public Sub Then_the_step_has_one_step_expression_type_STR_E0D1BCAD3F0E(step_expressions As Collection)
-    'Then the step has one step expression type {string}
+Public Sub Then_the_step_has_one_step_expression_with_the_dat_90F0EF0E4524(step_expressions As Collection)
+    'Then the step has one step expression with the data type {string}
     TSpec.expect(LCase(TypeName(TStepVars.step.Expressions(1)))).to_be step_expressions(1)
 End Sub
 
