--- a/step_definitions/Steps_parse_step_expressions.cls
+++ b/step_definitions/Steps_parse_step_expressions.cls
@@ -38,3 +38,38 @@ Public Sub Then_the_step_has_no_step_expressions_DF47F903F69C()
     'Then the step has no step expressions
     TSpec.expect(TStepVars.step.Expressions.Count).to_be 0
 End Sub
+
+Public Sub Then_the_step_has_INT_step_expressions_DF47F8B87951(step_expressions As Collection)
+    'Then the step has {integer} step expressions
+    TSpec.expect(TStepVars.step.Expressions.Count).to_be step_expressions(1)
+End Sub
+
+Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(step_expressions As Collection)
+    'And the data types of the expressions are {string}
+    
+    Dim data_types As Variant
+    Dim data_type As Variant
+    Dim index As Integer
+    
+    index = 1
+    data_types = Split(step_expressions(1), ",")
+    For Each data_type In data_types
+        TSpec.expect(LCase(TypeName(TStepVars.step.Expressions(index)))).to_be LCase(Trim(data_type))
+        index = index + 1
+    Next
+End Sub
+
+Public Sub Then_the_value_of_the_expressions_are_STR_8D4904837C42(step_expressions As Collection)
+    'And the value of the expressions are {string}
+        
+    Dim expr_values As Variant
+    Dim expr_value As Variant
+    Dim index As Integer
+    
+    index = 1
+    expr_values = Split(step_expressions(1), ",")
+    For Each expr_value In expr_values
+        TSpec.expect(CStr(TStepVars.step.Expressions(index))).to_be Trim(expr_value)
+        index = index + 1
+    Next
+End Sub
